--- a/generic.html
+++ b/generic.html
@@ -61,13 +61,13 @@
 
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic14.jpg" alt="" /></a>
 											<h3 class="major">Masters of Data Science</h3>
 											<p>Bellevue University <br>Bellevue, Nebraska</p>
 											<p>Worked with Python and R to analyze numerous databases. Endless practive data mining and cleaning. Started a few amazing projects that I still enjoy working on.</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic14.png" alt="" /></a>
 											<h3 class="major">Bachelors of Business Administration concentration in Risk Management </h3>
 											<p>California State University, Fullerton <br>Fullerton, California</p>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
