--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="generic.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Master's Degree in Data Science</h2>
-										<p>Graduate Student at the University of Bellevue where I worked on different data analysis projects, focused on a wide array of topics, from analyzing baseball statistics, forecasting stock price for companies in the S&P 500 and Nasdaq 100.</p>
-										<a href="#" class="special">Learn more</a>
+										<p>Graduate Student at the University of Bellevue with work focused on different data analysis projects, focused on a wide array of topics, from analyzing baseball statistics, forecasting stock price for companies in the S&P 500 and Nasdaq 100.</p>
+										<a href="generic.html" class="special">Learn More</a>
 									</div>
 								</div>
 							</section>
@@ -92,6 +92,7 @@
 											<p>Exploratory Data Analysis project focused on understanding the important factors influencing a countries happiness. What leads the Scandinavian Counties to consistently rank amoung the happiest countries.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
+										<a href="generic.html" class="special">More Projects</a>
 									</section>
 								</div>
 							</section>
