--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<div class="content">
 										<h2 class="major">Master's Degree in Data Science</h2>
 										<p>Graduate Student at the University of Bellevue with work focused on different data analysis projects, focused on a wide array of topics, from analyzing baseball statistics, forecasting stock price for companies in the S&P 500 and Nasdaq 100.</p>
-										<a href="generic.html" class="special">Learn More</a>
+										<a href="https://b-foster.github.io/generic.html" class="special">Learn More</a>
 									</div>
 								</div>
 							</section>
@@ -72,27 +72,15 @@
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3 class="major">Stock Price Forecasting</h3>
 											<p>Utilized Forecasting models using data from AlphaVantage's API. An interesting project that employed 3 forecasting algorithms and compare current stock price to predicted value, offering buy or sell suggestions as a result. The project I have enjoyed the most thus far.</p>
-											<a href="https://github.com/b-foster/Projects/tree/master/Stock%20Price%20Analysis" class="special">Learn more</a>
+											<a href="https://github.com/b-foster/Projects/tree/master/Stock_Price_Analysis" class="special">Learn more</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">Cancer Data Predictions</h3>
 											<p>My most recent work, predictive analysis project involving data from the National Cancer Institute's Genomic Data Commons Data Portal. This project is still in progress, currently analyzing predictions of patient vital status and cancerous organ or tissue of origin, with the newest addition involving data mining cancer screening images to match to certain cancers.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="https://github.com/b-foster/Projects/tree/master/Cancer_Patient_Analysis" class="special">Learn more</a>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Baseball Statistic Analysis</h3>
-											<p>Project analyzing the key, featured independent variables in leading to Wins, the target variable. Analyzed the correlation between different variables within the database. </p>
-											<a href="https://github.com/b-foster/Projects/tree/master/Baseball_Analysis" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">World Happiness Report</h3>
-											<p>Exploratory Data Analysis project focused on understanding the important factors influencing a countries happiness. What leads the Scandinavian Counties to consistently rank amoung the happiest countries.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<a href="generic.html" class="special">More Projects</a>
+										<a href="https://b-foster.github.io/elements.html" class="special">More Projects</a>
 									</section>
 								</div>
 							</section>
