--- a/elements.html
+++ b/elements.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Projects</a></h1>
+						<h1><a href="index.html">Brett Foster</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
