--- a/generic.html
+++ b/generic.html
@@ -57,8 +57,6 @@
 									<p>These two projects sparked my interest the most due to the complex nature, one analyzing a near unpredictable stock market and one attempting to help cancer patients or individuals looking to safeguard against a strong family history of cancer.</p>
 
 									<h3 class="major">Education</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic14.jpg" alt="" /></a>
@@ -68,9 +66,9 @@
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic14.png" alt="" /></a>
-											<h3 class="major">Bachelors of Business Administration concentration in Risk Management </h3>
+											<h3 class="major">Bachelors of Business Administration</h3>
 											<p>California State University, Fullerton <br>Fullerton, California</p>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+											<p>Coursework focused around Financial Mathematics and Actuarial Science with electives in Accounting.</p>
 										</article>
 									</section>
 
