--- a/generic.html
+++ b/generic.html
@@ -81,7 +81,7 @@
 				<section id="footer">
 					<div class="inner">
 						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">brefoster@my365.bellevue.edu</a></li>
+							<li class="icon solid fa-envelope"><a href="#">brettfoster08@gmail.com</a></li>
 						</ul>
 					</div>
 				</section>
