--- a/elements.html
+++ b/elements.html
@@ -117,7 +117,7 @@
 									1000 Galvin Road South<br />
 									Bellevue, NE 68005
 								</li>
-								<li class="icon solid fa-envelope"><a href="#">brefoster@my365.bellevue.edu</a></li>
+								<li class="icon solid fa-envelope"><a href="#">brettfoster08@gmail.com</a></li>
 								<!-- <li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li> -->
 								<!-- <li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li> -->
 							</ul>
